--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-   
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
     "gh-pages": "^5.0.0"
   }
 }
