--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "gh-pages": "^5.0.0"
   }
