--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "babel": "^6.23.0",
     "bootstrap": "^5.3.0",
+    "jquery": "^3.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -57,6 +58,11 @@
   "devDependencies": {
     "@babel/preset-flow": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
-    "gh-pages": "^5.0.0"
-  }
+    "gh-pages": "^5.0.0",
+    "typescript": "^5.2.2"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
